--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 IS_AZURE=False
+
+AZURE_DB_SERVER=tcp:project-tracker-server.database.windows.net,1433
+AZURE_DB_NAME=project-tracker-db
+AZURE_DB_USER=ianoconnor1217
+AZURE_DB_PASSWORD=your_secure_azure_password
+
+LOCAL_DB_SERVER=localhost
+LOCAL_DB_NAME=ProjectTracker
+LOCAL_DB_USER=sa
+LOCAL_DB_PASSWORD=your_secure_local_password
